# opengl-sprite-test

./: .gitignore  CMakeLists.txt  README.md  bicubic_frag.glsl  image_paths.h  lanczos_frag.glsl  main.c  norm_frag.glsl  norm_vert.glsl  shaders.h
glad/include/glad/: glad.h
glad/src/: glad.c
